# c_learn

./: .gitignore  CMakeLists.txt
config/: server_config.json
lmf/infer/: CMakeLists.txt  README.md
lmf/infer/cpp/: DetectionPostprocessor.cpp  ImagePreprocessor.cpp  LoggerV10.cpp  TensorRTEngine.cpp  Tensorrt_inference_v10.cpp
lmf/infer/hpp/: DetectionPostprocessor.hpp  ImagePreprocessor.hpp  LoggerV10.hpp  TensorRTEngine.hpp  Tensorrt_inference_v10.hpp
lmf/infer/test/: tensorrt_inference_test.cpp
lmf/sever/: CMakeLists.txt  README.md
lmf/sever/cpp/: InferenceEngine.cpp  InferenceServer.cpp  main.cpp  test_client.cpp
lmf/sever/hpp/: InferenceEngine.hpp  InferenceServer.hpp
ocr/infer/: CMakeLists.txt  README.md  config.h  export.sh
ocr/infer/cpp/: engine.cpp  main.cpp  ocr_detector.cpp  ocr_orientation.cpp  ocr_pipeline.cpp  ocr_recognizer.cpp  utils.cpp
ocr/infer/hpp/: engine.hpp  ocr_detector.hpp  ocr_orientation.hpp  ocr_pipeline.hpp  ocr_recognizer.hpp  utils.hpp
python/test/: ocr_main.py  ocr_main_api.py  revise_improved.py  test_api.py  test_asr.py  test_image.py  test_ocr.py
